--- a/shayan homework 3.html
+++ b/shayan homework 3.html
@@ -83,7 +83,7 @@
         <li>Javascript</li>
         <li>bootstrap</li>
         <li>ms word</li>
-        <li>ms excel</li>
+        <!-- <li>ms excel</li> -->
         <li>ms access</li>
         <li> powerpoint</li>
         
